# kinetic

./: .gitignore  LICENSE  README.asc  README.rst  README.textile  README.txt  build_wheel.sh  config.py  db.py  developing.asc  dynamic_user_config.py  install.sh  job.py  job_instance.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  scheduler.py  server.py  test_db.py  web_server.py
.github/workflows/: create-release.yml  python-app.yml
jobs_config/: example.toml  example.toml.0
procmanager/: __init__.py  __main__.py  config.py  db.py  dynamic_user_config.py  install.py  job.py  job_instance.py  main.py  process_utils.py  prompt_view.py  readme  scheduler.py  server.py  test_db.py  tui_helpers.py  utils.py  web_server.py
